--- a/themes/mypiggyback/front-page.html
+++ b/themes/mypiggyback/front-page.html
@@ -713,6 +713,98 @@
                       </button>
                     </div>
                   </div>
+
+                  <div class="vcl-tabs-slider-wrap  d-none">
+                    <div class="vcl-tabs-slider VclTabSlider swiper-container">
+                      <div class="swiper-wrapper">
+                        <div class="vcl-tabs-slide-item-cntlr swiper-slide">
+                          <div class="vcl-tabs-slide-item">
+                            <div class="vcl-tabs-slide">
+                              <div class="vcl-tab-link current">
+                                <span>1</span>
+                                <button class="tab-link" data-tab="vcl-tab-1">
+                                  <i><svg class="vcl-tab-icon-01" width="100" height="69.986" viewBox="0 0 100 69.986" fill="#141414">
+                                    <use xlink:href="#vcl-tab-icon-01"></use> </svg>
+                                  </i>
+                                </button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="vcl-tabs-slide-item-cntlr swiper-slide">
+                          <div class="vcl-tabs-slide-item">
+                            <div class="vcl-tabs-slide">
+                              <div class="vcl-tab-link">
+                                <span>2</span>
+                                <button class="tab-link" data-tab="vcl-tab-2">
+                                  <i><svg class="vcl-tab-icon-02" width="78.648" height="80" viewBox="0 0 78.648 80" fill="#141414">
+                                    <use xlink:href="#vcl-tab-icon-02"></use> </svg>
+                                  </i>
+                                </button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="vcl-tabs-slide-item-cntlr swiper-slide">
+                          <div class="vcl-tabs-slide-item">
+                            <div class="vcl-tabs-slide">
+                              <div class="vcl-tab-link">
+                                <span>3</span>
+                                <button class="tab-link" data-tab="vcl-tab-3">
+                                  <i><svg class="vcl-tab-icon-03" width="95.048" height="70" viewBox="0 0 95.048 70" fill="#141414">
+                                    <use xlink:href="#vcl-tab-icon-03"></use> </svg>
+                                  </i>
+                                </button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="vcl-tabs-slide-item-cntlr swiper-slide">
+                          <div class="vcl-tabs-slide-item">
+                            <div class="vcl-tabs-slide">
+                              <div class="vcl-tab-link">
+                                <span>4</span>
+                                <button class="tab-link" data-tab="vcl-tab-4">
+                                  <i><svg class="vcl-tab-icon-04" width="88" height="65.312" viewBox="0 0 88 65.312" fill="#141414">
+                                    <use xlink:href="#vcl-tab-icon-04"></use> </svg>
+                                  </i>
+                                </button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="vcl-tabs-slide-item-cntlr swiper-slide">
+                          <div class="vcl-tabs-slide-item">
+                            <div class="vcl-tabs-slide">
+                              <div class="vcl-tab-link">
+                                <span>5</span>
+                                <button class="tab-link" data-tab="vcl-tab-5">
+                                  <i><svg class="vcl-tab-icon-05" width="80.001" height="74.689" viewBox="0 0 80.001 74.689" fill="#141414">
+                                    <use xlink:href="#vcl-tab-icon-05"></use> </svg>
+                                  </i>
+                                </button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="vcl-tabs-slide-item-cntlr swiper-slide">
+                          <div class="vcl-tabs-slide-item">
+                            <div class="vcl-tabs-slide">
+                              <div class="vcl-tab-link">
+                                <span>6</span>
+                                <button class="tab-link" data-tab="vcl-tab-6">
+                                  <i><svg class="vcl-tab-icon-06" width="71.368" height="75" viewBox="0 0 71.368 75" fill="#141414">
+                                    <use xlink:href="#vcl-tab-icon-06"></use> </svg>
+                                  </i>
+                                </button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
                 </div>
               </div>
             </div>
