--- a/themes/mypiggyback/vehicle-transport.html
+++ b/themes/mypiggyback/vehicle-transport.html
@@ -362,12 +362,38 @@
 
 <section class="home-page-bnr">
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d66815.33056846341!2d-0.14238880307146762!3d51.51248988308131!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C%20UK!5e0!3m2!1sen!2sbd!4v1615400813839!5m2!1sen!2sbd" width="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <div class="loc-searching-form-cntlr show-sm">
+    <div style="position: relative;">
+      <form>
+        <div class="input-field-row starting-field">
+          <span>A</span>
+          <input type="text" name="" placeholder="Choose your starting point">
+        </div>
+        <div class="input-field-row ending-field">
+          <span>B</span>
+          <input type="text" name="" placeholder="Choose your ending point">
+        </div>
+        <span class="destination-switcher-button">
+          <i>
+            <svg class="destination-switcher-button-icon" width="8" height="18.526" viewBox="0 0 8 18.526" fill="#ccc">
+              <use xlink:href="#destination-switcher-button-icon"></use></svg>
+            </i>
+        </span>
+      </form>
+      <div class="loc-distance-miles">
+        <div>
+          <strong>15.6</strong>
+          <span>miles</span>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="home-page-bnr-con-cntlr">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <div class="home-page-bnr-con-inr">
-            <div class="loc-searching-form-cntlr">
+            <div class="loc-searching-form-cntlr hide-sm">
               <div style="position: relative;">
                 <form>
                   <div class="input-field-row starting-field">
