--- a/themes/mypiggyback/front-page.html
+++ b/themes/mypiggyback/front-page.html
@@ -663,7 +663,7 @@
                     <use xlink:href="#title-location-icon"></use> </svg></i>
                   </h2>
 
-                  <div class="vcl-tabs clearfix">
+                  <div class="vcl-tabs clearfix d-none">
                     <div class="vcl-tab-link current">
                       <span>1</span>
                       <button class="tab-link" data-tab="vcl-tab-1">
@@ -714,10 +714,9 @@
                     </div>
                   </div>
 
-                  <div class="vcl-tabs-slider-wrap  d-none">
-                    <div class="vcl-tabs-slider VclTabSlider swiper-container">
-                      <div class="swiper-wrapper">
-                        <div class="vcl-tabs-slide-item-cntlr swiper-slide">
+                  <div class="vcl-tabs-slider-wrap ">
+                    <div class="vcl-tabs-slider VclTabSlider">
+                        <div class="vcl-tabs-slide-item-cntlr">
                           <div class="vcl-tabs-slide-item">
                             <div class="vcl-tabs-slide">
                               <div class="vcl-tab-link current">
@@ -731,7 +730,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="vcl-tabs-slide-item-cntlr swiper-slide">
+                        <div class="vcl-tabs-slide-item-cntlr">
                           <div class="vcl-tabs-slide-item">
                             <div class="vcl-tabs-slide">
                               <div class="vcl-tab-link">
@@ -745,7 +744,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="vcl-tabs-slide-item-cntlr swiper-slide">
+                        <div class="vcl-tabs-slide-item-cntlr">
                           <div class="vcl-tabs-slide-item">
                             <div class="vcl-tabs-slide">
                               <div class="vcl-tab-link">
@@ -759,7 +758,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="vcl-tabs-slide-item-cntlr swiper-slide">
+                        <div class="vcl-tabs-slide-item-cntlr">
                           <div class="vcl-tabs-slide-item">
                             <div class="vcl-tabs-slide">
                               <div class="vcl-tab-link">
@@ -773,7 +772,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="vcl-tabs-slide-item-cntlr swiper-slide">
+                        <div class="vcl-tabs-slide-item-cntlr">
                           <div class="vcl-tabs-slide-item">
                             <div class="vcl-tabs-slide">
                               <div class="vcl-tab-link">
@@ -787,7 +786,7 @@
                             </div>
                           </div>
                         </div>
-                        <div class="vcl-tabs-slide-item-cntlr swiper-slide">
+                        <div class="vcl-tabs-slide-item-cntlr">
                           <div class="vcl-tabs-slide-item">
                             <div class="vcl-tabs-slide">
                               <div class="vcl-tab-link">
@@ -801,7 +800,6 @@
                             </div>
                           </div>
                         </div>
-                      </div>
                     </div>
                   </div>
 
