--- a/themes/mypiggyback/front-page.html
+++ b/themes/mypiggyback/front-page.html
@@ -719,7 +719,7 @@
                         <div class="vcl-tabs-slide-item-cntlr">
                           <div class="vcl-tabs-slide-item">
                             <div class="vcl-tabs-slide">
-                              <div class="vcl-tab-link current">
+                              <div class="vcl-tab-link">
                                 <span>1</span>
                                 <button class="tab-link" data-tab="vcl-tab-1">
                                   <i><svg class="vcl-tab-icon-01" width="100" height="69.986" viewBox="0 0 100 69.986" fill="#141414">
