--- a/themes/mypiggyback/front-page.html
+++ b/themes/mypiggyback/front-page.html
@@ -663,7 +663,7 @@
                     <use xlink:href="#title-location-icon"></use> </svg></i>
                   </h2>
 
-                  <div class="vcl-tabs clearfix d-none">
+                  <div class="vcl-tabs clearfix">
                     <div class="vcl-tab-link current">
                       <span>1</span>
                       <button class="tab-link" data-tab="vcl-tab-1">
@@ -714,7 +714,7 @@
                     </div>
                   </div>
 
-                  <div class="vcl-tabs-slider-wrap ">
+                  <div class="vcl-tabs-slider-wrap show-sm">
                     <div class="vcl-tabs-slider VclTabSlider">
                         <div class="vcl-tabs-slide-item-cntlr">
                           <div class="vcl-tabs-slide-item">
