--- a/themes/mypiggyback/front-page.html
+++ b/themes/mypiggyback/front-page.html
@@ -924,12 +924,12 @@
             <div class="ftr-menu ftr-col-2">
               <h4 class="ftr-menu-title fl-h4">Site Links...</h4>
               <ul class="reset-list clearfix">
-                <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Home</a></li>
-                <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Book Online</a></li>
-                <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Vehicle Recovery</a></li>
-                <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Vehicle Transport</a></li>
-                <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Our Services</a></li>
-                <li><i class="fas fa-long-arrow-alt-right"></i><a href="#">Contact Us  </a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Book Online</a></li>
+                <li><a href="#">Vehicle Recovery</a></li>
+                <li><a href="#">Vehicle Transport</a></li>
+                <li><a href="#">Our Services</a></li>
+                <li><a href="#">Contact Us  </a></li>
               </ul>
             </div>
             <div class="ftr-menu ftr-col-3">
