--- a/themes/mypiggyback/home2.html
+++ b/themes/mypiggyback/home2.html
@@ -308,7 +308,7 @@
                     </li>
                     <li><a href="#">Vehicle Transport</a></li>
                     <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#" target="_blank">Contact</a></li>
                   </ul>
                 </nav>
               </div>
