--- a/themes/mypiggyback/index.html
+++ b/themes/mypiggyback/index.html
@@ -324,49 +324,29 @@
   </div>
 </header>
 
-<section class="main-content">
-  <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-        </div>
-        <div class="col-md-6">
-        </div>
-      </div>
-  </div>    
-</section>
 
 
-
-<section class="main-content">
+<section class="sitemap-sec">
   <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <div class="sitemap">
+          <div class="sitemap-cntl">
             <h2>Sitemap</h2>
             <nav>
-              <ul>
+              <ol>
                 <li><a href="front-page.html" target="_blank">Home</a></li>
-              </ul>
+                <li><a href="about.html" target="_blank">About</a></li>
+                <li><a href="vehicle-recovery.html" target="_blank">Vehicle Recovery</a></li>
+                <li><a href="vehicle-transport.html" target="_blank">Vehicle Transport</a></li>
+                <li><a href="services.html" target="_blank">Services</a></li>
+                <li><a href="contact.html" target="_blank">Contact</a></li>
+              </ol>
             </nav>
           </div>
         </div>
       </div>
   </div>    
 </section>
-
-
-<div class="">
-  <div id="mapID" class="" data-latitude="23.7749" data-longitude="90.3657" style="width:100%; height:295px"></div>
-</div>
-
-
-
-<!-- -- Gap markup--- -->
-<div class="gap" data-value='100' data-md='50' data-xs='40' data-sm='30' data-xxs='20'></div>
-<div class="margin" data-value='100'></div>
-<div class="padding" data-value='100'></div>
-
-
 
 
 <footer class="footer-wrp">
