about page fix done

--- a/themes/mypiggyback/about.html
+++ b/themes/mypiggyback/about.html
@@ -414,6 +414,7 @@
 </section>
 
 <section class="mbp-about-num-sec">
+  <div class="xs-red-bg"></div>
   <div class="mbp-about-num-lft-bg">
     <img class="hide-sm" src="assets/images/mbp-about-num-lft-bg.jpg">
     <img class="show-sm" src="assets/images/xs-mbp-about-num-lft-bg.jpg">
