about page dev done

--- a/themes/mypiggyback/about.html
+++ b/themes/mypiggyback/about.html
@@ -512,8 +512,10 @@
               <li>
                 <div class="mbpat-grd-item">
                   <div class="mbp-atgi-img-ctlr">
-                    <div class="mbp-atgi-img inline-bg" style="background: url('assets/images/mbp-atgi-img-01.jpg');">
+                    <div class="mbp-atgi-img-div">
+                      <div class="mbp-atgi-img inline-bg" style="background: url('assets/images/mbp-atgi-img-01.jpg');">
                       
+                      </div>
                     </div>
                     <div class="mbp-atgi-des">
                       <div class="mbp-atgi-des-hdr">
