--- a/themes/mypiggyback/acc-registrar.html
+++ b/themes/mypiggyback/acc-registrar.html
@@ -313,66 +313,87 @@
 </header>
 
 
-<div class="gap-50"></div>
-<section class="registrar-sec">
-  <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="registrar-form">
-            <h3>Registration</h3>
-            <form>
-              <div class="form-field">
-                <input type="text" name="fname" placeholder="First Name">
+<div class="ac-page-cntlr">
+  <section class="registrar-sec">
+    <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="registrar-form block-700">
+              <div class="ac-page-hdr">
+                <h1 class="fl-h3 acph-title">Registration</h1>
               </div>
-              <div class="form-field">
-                <input type="text" name="lname" placeholder="Last Name">
-              </div>
-              <div class="form-field">
-                <label>Profile Photo</label>
-                <input type="file" name="phone" placeholder="Profile Photo">
-              </div>
-              <div class="form-field">
-                <input type="text" name="email" placeholder="Email">
-              </div>
-              <div class="form-field">
-                <input type="text" name="phone" placeholder="Phone">
-              </div>
-              <div class="form-field">
-                <input type="text" name="phone" placeholder="Address">
-              </div>
-              <div class="form-field">
-                <input type="text" name="phone" placeholder="City">
-              </div>
-              <div class="form-field">
-                <input type="text" name="phone" placeholder="Street Address">
-              </div>
-              <div class="form-field">
-                <input type="text" name="phone" placeholder="Year of driving">
-              </div>
-              <div class="form-field">
-                <select>
-                  <option>Country</option>
-                  <option>Country</option>
-                  <option>Country</option>
-                  <option>Country</option>
-                </select>
-              </div>
-              <div class="form-field">
-                <input type="text" name="phone" placeholder="Password">
-              </div>
-              <div class="form-field">
-                <input type="text" name="phone" placeholder="Re type password">
-              </div>
-              <div class="form-field">
-                <textarea placeholder="About yourself"></textarea>
-              </div>
-            </form>
+              <form>
+                <div class="fl-input-field-row-grd">
+                  <div class="fl-input-field-row mp-input">
+                    <label>First Name</label>
+                    <input type="text" name="fname" placeholder="First Name">
+                  </div>
+                  <div class="fl-input-field-row mp-input">
+                    <label>Last Name</label>
+                    <input type="text" name="lname" placeholder="Last Name">
+                  </div>
+                </div>
+                <div class="fl-input-field-row-grd">
+                  <div class="fl-input-field-row mp-input">
+                    <label>Email</label>
+                    <input type="text" name="email" placeholder="Email">
+                  </div>
+                  <div class="fl-input-field-row mp-input">
+                    <label>Phone</label>
+                    <input type="text" name="phone" placeholder="Phone">
+                  </div>
+                </div>
+                <div class="fl-input-field-row mp-input">
+                  <label>Address</label>
+                  <input type="text" name="phone" placeholder="Address">
+                </div>
+                <div class="fl-input-field-row mp-input">
+                  <label>Street Address</label>
+                  <input type="text" name="phone" placeholder="Street Address">
+                </div>
+                <div class="fl-input-field-row-grd">
+                  <div class="fl-input-field-row mp-input">
+                    <label>City</label>
+                    <input type="text" name="phone" placeholder="City">
+                  </div>
+                  <div class="fl-input-field-row mp-input">
+                    <label>Year of driving</label>
+                    <input type="text" name="phone" placeholder="Year of driving">
+                  </div>
+                </div>
+                <div class="fl-input-field-row mp-input mp-selctpicker-ctlr">
+                  <label>Country</label>
+                  <select class="selectpicker">
+                    <option>Country</option>
+                    <option>Country</option>
+                    <option>Country</option>
+                    <option>Country</option>
+                  </select>
+                </div>
+                <div class="fl-input-field-row-grd">
+                  <div class="fl-input-field-row mp-input">
+                    <label>Password*</label>
+                    <input type="text" name="phone" placeholder="Password">
+                  </div>
+                  <div class="fl-input-field-row mp-input">
+                    <label>Retype password*</label>
+                    <input type="text" name="phone" placeholder="Retype password">
+                  </div>
+                </div>
+                <div class="fl-input-field-row mp-input">
+                  <textarea placeholder="About yourself"></textarea>
+                </div>
+                <div class="fl-input-field-row mp-input">
+                  <label>Profile Photo</label>
+                  <input type="file" name="phone" placeholder="Profile Photo">
+                </div>
+              </form>
+            </div>
           </div>
         </div>
-      </div>
-  </div>    
-</section>
-<div class="gap-50"></div>
+    </div>    
+  </section>
+</div>
 
 <footer class="footer-wrp">
   <div class="ftr-top">
