--- a/themes/mypiggyback/acc-login.html
+++ b/themes/mypiggyback/acc-login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Registrar</title>
+  <title>Login</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -314,15 +314,39 @@
 
 
 
-<section class="registrar-sec">
-  <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-          
+<div class="ac-page-cntlr">
+  <section class="logon-sec">
+    <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="login-form block-700">
+              <div class="ac-page-hdr">
+                <h1 class="fl-h3 acph-title">Login</h1>
+              </div>
+              <form>
+               <div class="fl-input-field-row mp-input">
+                  <label>Email *</label>
+                  <input type="email" name="" placeholder="Your Email">
+                </div>
+               <div class="fl-input-field-row mp-input">
+                  <label>Password *</label>
+                  <input type="password" name="" placeholder="Password">
+                </div>
+                <div class="fl-forget-row">
+                    <a class="fl-forget-pass-btn" href="#">Forgot your password?</a>
+                  </div>
+                <div class="fl-input-field-row mp-input fl-submit-btn w-full">
+                  <input type="submit" value="Submit">
+                </div>
+
+              </form>
+            </div>
+          </div>
         </div>
-      </div>
-  </div>    
-</section>
+    </div>    
+  </section>
+</div>
+
 
 
 <footer class="footer-wrp">
