--- a/themes/mypiggyback/acc-dashboard-dirver.html
+++ b/themes/mypiggyback/acc-dashboard-dirver.html
@@ -313,16 +313,15 @@
 </header>
 
 
-<div class="gap-50"></div>
+<div class="ac-page-cntlr">
 <section class="dashboard-sec">
   <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <div class="dashboard-cn">
-            <div class="acc-tabs">
-              <a href="#">Profile</a>
-              <a href="#">Jobs</a>
-              <a href="#">Logout</a>
+          <div class="dashboard-cn block-700">
+            <div class="fl-tabs clearfix text-center">
+              <button class="tab-link" data-tab="tab-1"><span>Profile</span></button>
+              <button class="tab-link current" data-tab="tab-2"><span>Jobs</span></button>
             </div>
           </div>
 
@@ -381,7 +380,7 @@
       </div>
   </div>    
 </section>
-<div class="gap-50"></div>
+</div>
 
 <footer class="footer-wrp">
   <div class="ftr-top">
