--- a/themes/mypiggyback/acc-login.html
+++ b/themes/mypiggyback/acc-login.html
@@ -336,7 +336,7 @@
                     <a class="fl-forget-pass-btn" href="#">Forgot your password?</a>
                   </div>
                 <div class="fl-input-field-row mp-input fl-submit-btn w-full">
-                  <input type="submit" value="Submit">
+                  <input type="submit" value="Sign In">
                 </div>
 
               </form>
