--- a/themes/mypiggyback/acc-registrar.html
+++ b/themes/mypiggyback/acc-registrar.html
@@ -324,10 +324,10 @@
               </div>
               <form>
                 <div class="fl-input-field-row mp-input">
-                  <div class="profile-img-edit">
-                    <input type="file" name="" value="" id="choose-file">
+                  <div class="profile-img-edit" id="choose-file">
+                    <input type="hidden" name="" value="" id="_profile_logo_id">
                     <label for="choose-file">
-                      <i><img src="assets/images/plus-icon-2.png"></i>
+                      <i><img src="<?php echo THEME_URI; ?>/assets/images/plus-icon-2.png"></i>
                       <span class="file-up-instruction-txt">CLICK TO ADD<br> PROFILE PHOTO</span>
                     </label>
                   </div>
