--- a/themes/mypiggyback/acc-dashboard-dirver.html
+++ b/themes/mypiggyback/acc-dashboard-dirver.html
@@ -226,7 +226,7 @@
 
 </head>
 <body>
-<header class="header-wrap">
+<header class="header-wrap logged-header">
   <div class="top-bar">
     <span></span>
     <div class="container">
@@ -270,6 +270,19 @@
               </div>
             </div>
             <div class="hdr-right">
+              <div class="hdr-login-profile login-btn-expend">
+                <div class="hdr-login-profile-img">
+                  <img src="assets/images/hdr-login-profile-img.png">
+                </div>
+                <strong>Georgio</strong>
+                <ul class="reset-list clearfix">
+                  <li>
+                    <i class="fas fa-sign-out-alt"></i>
+                    <a href="#">Log out</a>
+                  </li>
+                </ul>
+              </div>
+
               <div class="hdr-menu">
                 <nav class="main-nav">
                   <ul class="clearfix reset-list">
@@ -323,59 +336,193 @@
               <button class="tab-link" data-tab="tab-1"><span>Profile</span></button>
               <button class="tab-link current" data-tab="tab-2"><span>Jobs</span></button>
             </div>
-          </div>
+            <div id="tab-1" class="fl-tab-content">
+              <div class="tab-con-inr">
+                <form>
+                  <div class="fl-input-field-row mp-input profile-edit-step-cntlr">
+                    <div class="profile-img-edit profile-edit-step-1 profile-img-step-1">
+                      <img src="assets/images/hdr-login-profile-img.png">
+                    </div>
+                    <div class="profile-img-edit profile-edit-step-2 profile-img-step-2">
+                      <input type="file" name="" value="" id="choose-file">
+                      <label for="choose-file">
+                        <i><img src="assets/images/plus-icon-2.png"></i>
+                        <span class="file-up-instruction-txt">CLICK TO ADD<br> PROFILE PHOTO</span>
+                      </label>
+                    </div>
+                  </div>
+                  <div class="fl-input-field-row-grd">
+                    <div class="fl-input-field-row mp-input">
+                      <label>First Name</label>
+                      <input type="text" name="fname" value="Lorem">
+                    </div>
+                    <div class="fl-input-field-row mp-input">
+                      <label>Last Name</label>
+                      <input type="text" name="lname" value="ipsum">
+                    </div>
+                  </div>
+                  <div class="fl-input-field-row-grd">
+                    <div class="fl-input-field-row mp-input">
+                      <label>Email</label>
+                      <input type="text" name="email" value="Email">
+                    </div>
+                    <div class="fl-input-field-row mp-input">
+                      <label>Phone</label>
+                      <input type="text" name="phone" value="Phone">
+                    </div>
+                  </div>
+                  <div class="fl-input-field-row mp-input">
+                    <label>Address</label>
+                    <input type="text" name="phone" value="Address">
+                  </div>
+                  <div class="fl-input-field-row mp-input">
+                    <label>Street Address</label>
+                    <input type="text" name="phone" value="Street Address">
+                  </div>
+                  <div class="fl-input-field-row-grd">
+                    <div class="fl-input-field-row mp-input">
+                      <label>City</label>
+                      <input type="text" name="phone" value="City">
+                    </div>
+                    <div class="fl-input-field-row mp-input">
+                      <label>Year of driving</label>
+                      <input type="text" name="phone" value="Year of driving">
+                    </div>
+                  </div>
+                  <div class="fl-input-field-row mp-input mp-selctpicker-ctlr">
+                    <label>Country</label>
+                    <select class="selectpicker">
+                      <option>Country</option>
+                      <option>Country</option>
+                      <option>Country</option>
+                      <option>Country</option>
+                    </select>
+                  </div>
+                  <div class="fl-input-field-row-grd">
+                    <div class="fl-input-field-row mp-input">
+                      <label>Password*</label>
+                      <input type="text" name="phone" value="Password">
+                    </div>
+                    <div class="fl-input-field-row mp-input">
+                      <label>Retype password*</label>
+                      <input type="text" name="phone" value="Retype password">
+                    </div>
+                  </div>
+                  <div class="fl-input-field-row mp-input">
+                    <div class="input-field">
+                      <label>About yourself</label>
+                      <textarea value="About yourself"></textarea>
+                    </div>
+                  </div>
+                  <div class="plr-30">
+                    <div class="profile-submit-btn profile-edit-step-1 flx-btn-center">
+                      <!-- <input type="submit" name="" value="Edit Profile"> -->
+                      <a class="edit-profile-btn" href="javascript:void(0)">Edit Profile</a>
+                    </div>
+                    <div class="profile-submit-btn profile-edit-step-2 flx-btn-center clearfix">
+                      <input type="submit" name="" value="Save Changes">
+                      <!-- <input id="edit-profile-cancle-btn" type="reset" name="" value="Cancel"> -->
+                      <a href="javascript:void(0)" id="edit-profile-cancle-btn">Cancel</a>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+            <div id="tab-2" class="fl-tab-content current">
+              <div class="tab-con-inr">
+                <div class="job-grds-cntlr">
+                  <ul class="reset-list clearfix">
+                    <li>
+                      <div class="job-grd-item">
+                        <div class="mHc">
+                          <h5 class="fl-h5">Job Title</h5>
+                        </div>
+                        <div class="mHc1">
+                          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                          tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                        <div class="mHc2">
+                          <a href="#">More</a>
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="job-grd-item">
+                        <div class="mHc">
+                          <h5 class="fl-h5">Job Title</h5>
+                        </div>
+                        <div class="mHc1">
+                          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                          tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                        <div class="mHc2">
+                          <a href="#">More</a>
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="job-grd-item">
+                        <div class="mHc">
+                          <h5 class="fl-h5">Job Title</h5>
+                        </div>
+                        <div class="mHc1">
+                          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                          tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                        <div class="mHc2">
+                          <a href="#">More</a>
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="job-grd-item">
+                        <div class="mHc">
+                          <h5 class="fl-h5">Job Title</h5>
+                        </div>
+                        <div class="mHc1">
+                          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                          tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                        <div class="mHc2">
+                          <a href="#">More</a>
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="job-grd-item">
+                        <div class="mHc">
+                          <h5 class="fl-h5">Job Title</h5>
+                        </div>
+                        <div class="mHc1">
+                          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                          tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                        <div class="mHc2">
+                          <a href="#">More</a>
+                        </div>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="job-grd-item">
+                        <div class="mHc">
+                          <h5 class="fl-h5">Job Title</h5>
+                        </div>
+                        <div class="mHc1">
+                          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                          tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                        <div class="mHc2">
+                          <a href="#">More</a>
+                        </div>
+                      </div>
+                    </li>
 
-          <div class="registrar-form">
-            <h3>Registration</h3>
-            <form>
-              <div class="form-field">
-                <input type="text" name="fname" placeholder="First Name" value="Thomas">
+                  </ul>
+                </div>
               </div>
-              <div class="form-field">
-                <input type="text" name="lname" placeholder="Last Name" value="Fide">
-              </div>
-              <div class="form-field">
-                <label>Profile Photo</label>
-                <input type="file" name="phone" placeholder="Profile Photo">
-              </div>
-              <div class="form-field">
-                <input type="text" name="email" placeholder="Email">
-              </div>
-              <div class="form-field">
-                <input type="text" name="phone" placeholder="Phone">
-              </div>
-              <div class="form-field">
-                <input type="text" name="phone" placeholder="Address">
-              </div>
-              <div class="form-field">
-                <input type="text" name="phone" placeholder="City">
-              </div>
-              <div class="form-field">
-                <input type="text" name="phone" placeholder="Street Address">
-              </div>
-              <div class="form-field">
-                <input type="text" name="phone" placeholder="Year of driving">
-              </div>
-              <div class="form-field">
-                <select>
-                  <option>Country</option>
-                  <option>Country</option>
-                  <option>Country</option>
-                  <option>Country</option>
-                </select>
-              </div>
-              <div class="form-field">
-                <input type="text" name="phone" placeholder="Password">
-              </div>
-              <div class="form-field">
-                <input type="text" name="phone" placeholder="Re type password">
-              </div>
-              <div class="form-field">
-                <textarea placeholder="About yourself"></textarea>
-              </div>
-            </form>
-          </div>
+            </div>
 
+          </div>
         </div>
       </div>
   </div>    
@@ -455,7 +602,7 @@
               <h4 class="ftr-menu-title fl-h4">Newsletter Signup...</h4>
               <p>Sign up to our mailing list and receive <br>  exclusive updates and discounts.  </p>
               <div class="ftr-search-box">
-                <input type="text" name="email" placeholder="Your email address">
+                <input type="text" name="email" value="Your email address">
                 <button>JOIN</button>
               </div>
             </div>
