--- a/themes/mypiggyback/acc-dashboard-dirver.html
+++ b/themes/mypiggyback/acc-dashboard-dirver.html
@@ -333,10 +333,10 @@
         <div class="col-sm-12">
           <div class="dashboard-cn block-700">
             <div class="fl-tabs clearfix text-center">
-              <button class="tab-link" data-tab="tab-1"><span>Profile</span></button>
-              <button class="tab-link current" data-tab="tab-2"><span>Jobs</span></button>
+              <button class="tab-link current" data-tab="tab-1"><span>Profile</span></button>
+              <button class="tab-link " data-tab="tab-2"><span>Jobs</span></button>
             </div>
-            <div id="tab-1" class="fl-tab-content">
+            <div id="tab-1" class="fl-tab-content current">
               <div class="tab-con-inr">
                 <form>
                   <div class="fl-input-field-row mp-input profile-edit-step-cntlr">
@@ -428,7 +428,7 @@
                 </form>
               </div>
             </div>
-            <div id="tab-2" class="fl-tab-content current">
+            <div id="tab-2" class="fl-tab-content">
               <div class="tab-con-inr">
                 <div class="job-grds-cntlr">
                   <ul class="reset-list clearfix">
