--- a/themes/mypiggyback/acc-dashboard-dirver.html
+++ b/themes/mypiggyback/acc-dashboard-dirver.html
@@ -332,9 +332,9 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="dashboard-cn block-700">
-            <div class="fl-tabs clearfix text-center">
-              <button class="tab-link current" data-tab="tab-1"><span>Profile</span></button>
-              <button class="tab-link " data-tab="tab-2"><span>Jobs</span></button>
+            <div class="mp-tabs clearfix text-center">
+              <button class="mp-tab-link current" data-tab="tab-1"><span>Profile</span></button>
+              <button class="mp-tab-link " data-tab="tab-2"><span>Jobs</span></button>
             </div>
             <div id="tab-1" class="fl-tab-content current">
               <div class="tab-con-inr">
