--- a/themes/mypiggyback/acc-dashboard-dirver.html
+++ b/themes/mypiggyback/acc-dashboard-dirver.html
@@ -433,7 +433,7 @@
                 <div class="job-grds-cntlr">
                   <ul class="reset-list clearfix">
                     <li>
-                      <div class="job-grd-item">
+                      <div class="job-grd-item mpac-grd">
                         <div class="mHc">
                           <h5 class="fl-h5">Job Title</h5>
                         </div>
@@ -447,7 +447,7 @@
                       </div>
                     </li>
                     <li>
-                      <div class="job-grd-item">
+                      <div class="job-grd-item mpac-grd">
                         <div class="mHc">
                           <h5 class="fl-h5">Job Title</h5>
                         </div>
@@ -461,7 +461,7 @@
                       </div>
                     </li>
                     <li>
-                      <div class="job-grd-item">
+                      <div class="job-grd-item mpac-grd">
                         <div class="mHc">
                           <h5 class="fl-h5">Job Title</h5>
                         </div>
@@ -475,7 +475,7 @@
                       </div>
                     </li>
                     <li>
-                      <div class="job-grd-item">
+                      <div class="job-grd-item mpac-grd">
                         <div class="mHc">
                           <h5 class="fl-h5">Job Title</h5>
                         </div>
@@ -489,7 +489,7 @@
                       </div>
                     </li>
                     <li>
-                      <div class="job-grd-item">
+                      <div class="job-grd-item mpac-grd">
                         <div class="mHc">
                           <h5 class="fl-h5">Job Title</h5>
                         </div>
@@ -503,7 +503,7 @@
                       </div>
                     </li>
                     <li>
-                      <div class="job-grd-item">
+                      <div class="job-grd-item mpac-grd">
                         <div class="mHc">
                           <h5 class="fl-h5">Job Title</h5>
                         </div>
