--- a/themes/mypiggyback/acc-dashboard-admin.html
+++ b/themes/mypiggyback/acc-dashboard-admin.html
@@ -331,7 +331,7 @@
   <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <div class="dashboard-cn block-700">
+          <div class="dashboard-cn block-800">
             <div class="mp-tabs clearfix text-center">
               <button class="mp-tab-link " data-tab="tab-1"><span>Profile</span></button>
               <button class="mp-tab-link " data-tab="tab-2"><span>Jobs</span></button>
@@ -538,10 +538,10 @@
                             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
                           </div>
                           <div class="author-tel">
-                            <a href="tel:2025550191">2025550191</a>
+                            <a href="tel:2025550191"><i class="fas fa-phone"></i>2025550191</a>
                           </div>
                           <div class="author-mail">
-                            <a href="mailto:">loremipsum@gmail.com</a>
+                            <a href="mailto:"><i class="far fa-envelope"></i>loremipsum@gmail.com</a>
                           </div>
                         </div>
                       </div>
@@ -557,10 +557,10 @@
                             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
                           </div>
                           <div class="author-tel">
-                            <a href="tel:2025550191">2025550191</a>
+                            <a href="tel:2025550191"><i class="fas fa-phone"></i>2025550191</a>
                           </div>
                           <div class="author-mail">
-                            <a href="mailto:">loremipsum@gmail.com</a>
+                            <a href="mailto:"><i class="far fa-envelope"></i>loremipsum@gmail.com</a>
                           </div>
                         </div>
                       </div>
@@ -576,10 +576,10 @@
                             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
                           </div>
                           <div class="author-tel">
-                            <a href="tel:2025550191">2025550191</a>
+                            <a href="tel:2025550191"><i class="fas fa-phone"></i>2025550191</a>
                           </div>
                           <div class="author-mail">
-                            <a href="mailto:">loremipsum@gmail.com</a>
+                            <a href="mailto:"><i class="far fa-envelope"></i>loremipsum@gmail.com</a>
                           </div>
                         </div>
                       </div>
@@ -595,10 +595,10 @@
                             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
                           </div>
                           <div class="author-tel">
-                            <a href="tel:2025550191">2025550191</a>
+                            <a href="tel:2025550191"><i class="fas fa-phone"></i>2025550191</a>
                           </div>
                           <div class="author-mail">
-                            <a href="mailto:">loremipsum@gmail.com</a>
+                            <a href="mailto:"><i class="far fa-envelope"></i>loremipsum@gmail.com</a>
                           </div>
                         </div>
                       </div>
@@ -614,10 +614,10 @@
                             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
                           </div>
                           <div class="author-tel">
-                            <a href="tel:2025550191">2025550191</a>
+                            <a href="tel:2025550191"><i class="fas fa-phone"></i>2025550191</a>
                           </div>
                           <div class="author-mail">
-                            <a href="mailto:">loremipsum@gmail.com</a>
+                            <a href="mailto:"><i class="far fa-envelope"></i>loremipsum@gmail.com</a>
                           </div>
                         </div>
                       </div>
@@ -643,10 +643,10 @@
                             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
                           </div>
                           <div class="author-tel">
-                            <a href="tel:2025550191">2025550191</a>
+                            <a href="tel:2025550191"><i class="fas fa-phone"></i>2025550191</a>
                           </div>
                           <div class="author-mail">
-                            <a href="mailto:">loremipsum@gmail.com</a>
+                            <a href="mailto:"><i class="far fa-envelope"></i>loremipsum@gmail.com</a>
                           </div>
                         </div>
                       </div>
@@ -662,10 +662,10 @@
                             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
                           </div>
                           <div class="author-tel">
-                            <a href="tel:2025550191">2025550191</a>
+                            <a href="tel:2025550191"><i class="fas fa-phone"></i>2025550191</a>
                           </div>
                           <div class="author-mail">
-                            <a href="mailto:">loremipsum@gmail.com</a>
+                            <a href="mailto:"><i class="far fa-envelope"></i>loremipsum@gmail.com</a>
                           </div>
                         </div>
                       </div>
@@ -681,10 +681,10 @@
                             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
                           </div>
                           <div class="author-tel">
-                            <a href="tel:2025550191">2025550191</a>
+                            <a href="tel:2025550191"><i class="fas fa-phone"></i>2025550191</a>
                           </div>
                           <div class="author-mail">
-                            <a href="mailto:">loremipsum@gmail.com</a>
+                            <a href="mailto:"><i class="far fa-envelope"></i>loremipsum@gmail.com</a>
                           </div>
                         </div>
                       </div>
@@ -700,10 +700,10 @@
                             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
                           </div>
                           <div class="author-tel">
-                            <a href="tel:2025550191">2025550191</a>
+                            <a href="tel:2025550191"><i class="fas fa-phone"></i>2025550191</a>
                           </div>
                           <div class="author-mail">
-                            <a href="mailto:">loremipsum@gmail.com</a>
+                            <a href="mailto:"><i class="far fa-envelope"></i>loremipsum@gmail.com</a>
                           </div>
                         </div>
                       </div>
@@ -719,10 +719,10 @@
                             <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
                           </div>
                           <div class="author-tel">
-                            <a href="tel:2025550191">2025550191</a>
+                            <a href="tel:2025550191"><i class="fas fa-phone"></i>2025550191</a>
                           </div>
                           <div class="author-mail">
-                            <a href="mailto:">loremipsum@gmail.com</a>
+                            <a href="mailto:"><i class="far fa-envelope"></i>loremipsum@gmail.com</a>
                           </div>
                         </div>
                       </div>
