--- a/themes/mypiggyback/acc-dashboard-dirver.html
+++ b/themes/mypiggyback/acc-dashboard-dirver.html
@@ -331,12 +331,12 @@
   <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <div class="dashboard-cn block-700">
+          <div class="dashboard-cn block-800">
             <div class="mp-tabs clearfix text-center">
               <button class="mp-tab-link current" data-tab="tab-1"><span>Profile</span></button>
               <button class="mp-tab-link " data-tab="tab-2"><span>Jobs</span></button>
             </div>
-            <div id="tab-1" class="fl-tab-content current">
+            <div id="tab-1" class="mp-tab-content current">
               <div class="tab-con-inr">
                 <form>
                   <div class="fl-input-field-row mp-input profile-edit-step-cntlr">
@@ -428,7 +428,7 @@
                 </form>
               </div>
             </div>
-            <div id="tab-2" class="fl-tab-content">
+            <div id="tab-2" class="mp-tab-content">
               <div class="tab-con-inr">
                 <div class="job-grds-cntlr">
                   <ul class="reset-list clearfix">
