--- a/themes/mypiggyback/acc-job-single.html
+++ b/themes/mypiggyback/acc-job-single.html
@@ -351,7 +351,7 @@
                 <ul class="reset-list">
                   <li>
                     <div class="diverListhook clearfix">
-                      <div class="profile-photo">Photo</div>
+                      <div class="profile-photo-cntlr"><div class="profile-photo">Photo</div></div>
                       <div class="name"><strong>Driver Name</strong></div>
                       <div class="details"><a target="_blank" href="#">See Profile</a></div>
                       <div class="details"><a href="#">Appoint</a></div>
@@ -359,7 +359,7 @@
                   </li>
                   <li>
                     <div class="diverListhook clearfix">
-                      <div class="profile-photo">Photo</div>
+                      <div class="profile-photo-cntlr"><div class="profile-photo">Photo</div></div>
                       <div class="name"><strong>Driver Name</strong></div>
                       <div class="details"><a target="_blank" href="#">See Profile</a></div>
                       <div class="details"><a href="#">Appoint</a></div>
@@ -367,7 +367,7 @@
                   </li>
                   <li>
                     <div class="diverListhook clearfix">
-                      <div class="profile-photo">Photo</div>
+                      <div class="profile-photo-cntlr"><div class="profile-photo">Photo</div></div>
                       <div class="name"><strong>Driver Name</strong></div>
                       <div class="details"><a target="_blank" href="#">See Profile</a></div>
                       <div class="details"><a href="#">Appoint</a></div>
@@ -375,7 +375,7 @@
                   </li>
                   <li>
                     <div class="diverListhook clearfix">
-                      <div class="profile-photo">Photo</div>
+                      <div class="profile-photo-cntlr"><div class="profile-photo">Photo</div></div>
                       <div class="name"><strong>Driver Name</strong></div>
                       <div class="details"><a target="_blank" href="#">See Profile</a></div>
                       <div class="details"><a href="#">Appoint</a></div>
