--- a/themes/mypiggyback/acc-dashboard-admin.html
+++ b/themes/mypiggyback/acc-dashboard-admin.html
@@ -277,6 +277,10 @@
                 <strong>Admin</strong>
                 <ul class="reset-list clearfix">
                   <li>
+                    <i class="fas fa-home"></i>
+                    <a href="#">Dashboard</a>
+                  </li>
+                  <li>
                     <i class="fas fa-sign-out-alt"></i>
                     <a href="#">Log out</a>
                   </li>
