--- a/themes/mypiggyback/acc-driver-single-for-admin.html
+++ b/themes/mypiggyback/acc-driver-single-for-admin.html
@@ -357,7 +357,7 @@
                   <input id="mfrom" type="text" name="from" placeholder="From">
                 </div>
                 <div class="fl-input-field-row mp-input">
-                  <input id="mto" type="text" name="to" placeholder="TO">
+                  <input id="mto" type="text" name="to" placeholder="To">
                 </div>
                 <div class="mp-btn-cntlr">
                   <button class="mp-btn" type="submit">Submit</button>
