--- a/themes/mypiggyback/acc-dashboard-admin.html
+++ b/themes/mypiggyback/acc-dashboard-admin.html
@@ -342,7 +342,7 @@
               <button class="mp-tab-link current" data-tab="tab-3"><span>Drivers</span></button>
               <button class="mp-tab-link " data-tab="tab-4"><span>Customers</span></button>
             </div>
-            <div id="tab-1" class="mp-tab-content ">
+            <div id="tab-1" class="mp-tab-content profile-tab-con-cntlr">
               <div class="tab-con-inr">
                 <form>
                   <div class="fl-input-field-row mp-input profile-edit-step-cntlr">
@@ -434,7 +434,7 @@
                 </form>
               </div>
             </div>
-            <div id="tab-2" class="mp-tab-content">
+            <div id="tab-2" class="mp-tab-content jobs-tab-con-cntlr">
               <div class="tab-con-inr">
                 <div class="job-grds-cntlr">
                   <ul class="reset-list clearfix">
@@ -527,7 +527,7 @@
                 </div>
               </div>
             </div>
-            <div id="tab-3" class="mp-tab-content">
+            <div id="tab-3" class="mp-tab-content drivers-tab-con-cntlr">
               <div class="tab-con-inr">
                 <div class="job-grds-cntlr">
                   <ul class="reset-list clearfix">
@@ -632,7 +632,7 @@
                 </div>
               </div>
             </div>
-            <div id="tab-4" class="mp-tab-content current">
+            <div id="tab-4" class="mp-tab-content current customer-tab-con-cntlr">
               <div class="tab-con-inr">
                 <div class="job-grds-cntlr">
                   <ul class="reset-list clearfix">
