--- a/themes/mypiggyback/acc-dashboard-dirver.html
+++ b/themes/mypiggyback/acc-dashboard-dirver.html
@@ -340,7 +340,7 @@
               <button class="mp-tab-link current" data-tab="tab-1"><span>Profile</span></button>
               <button class="mp-tab-link " data-tab="tab-2"><span>Jobs</span></button>
             </div>
-            <div id="tab-1" class="mp-tab-content current">
+            <div id="tab-1" class="mp-tab-content current profile-tab-con-cntlr">
               <div class="tab-con-inr">
                 <form>
                   <div class="fl-input-field-row mp-input profile-edit-step-cntlr">
@@ -432,7 +432,7 @@
                 </form>
               </div>
             </div>
-            <div id="tab-2" class="mp-tab-content">
+            <div id="tab-2" class="mp-tab-content jobs-tab-con-cntlr">
               <div class="tab-con-inr">
                 <div class="job-grds-cntlr">
                   <ul class="reset-list clearfix">
