google map apis

--- a/themes/mypiggyback/acc-driver-single-for-admin.html
+++ b/themes/mypiggyback/acc-driver-single-for-admin.html
@@ -484,7 +484,7 @@
 <script src="assets/fancybox3/dist/jquery.fancybox.min.js"></script>
 <script src="assets/slick.slider/slick.js"></script>
 <script src="assets/swiper/swiper-bundle.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA0HE_WjsGfLnvqmnjWcMmSxth-5R9ks1Q"></script>
+<script src="https://maps.googleapis.com/maps/api/js?v=3&sensor=false&libraries=places&key=AIzaSyBsJC1Qvzh-486zUtJ6iDCOrWykQe2LDFw"></script>
 <script src="assets/js/jquery.matchHeight-min.js"></script>
 <script src="assets/js/app.js"></script>
 <script src="assets/js/wow.min.js"></script>
